@@ -14,6 +14,7 @@ test {
     jvmArgs '--add-exports', 'jlsm.core/jlsm.tree.internal=ALL-UNNAMED'
     jvmArgs '--add-modules', 'jdk.incubator.vector'
     jvmArgs '--add-exports', 'jlsm.core/jlsm.core.json.internal=ALL-UNNAMED'
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
     jvmArgs '-ea'
 }
 // No eclipse block: JDT compiles test source as jlsm.core, which can access
